# walle_ws

./: .gitmodules
.devcontainer/: Dockerfile
src/amr_control/: CMakeLists.txt  package.xml  setup.py
src/amr_control/cfg/: ObstacleDetectionConfig.cfg
src/amr_control/config/: ridgeback_rviz_config.rviz  walle_rviz_config.rviz
src/amr_control/data/: Untitled Diagram.drawio  recorded_data.bag  recorded_data_2.bag  recorded_data_DWA_2.bag  recorded_data_nMPC_11.bag  recorded_data_nMPC_13.bag  recorded_data_nMPC_5.bag
src/amr_control/data/rosbags/: recorded_data_DWA_1.bag  recorded_data_DWA_14.bag  recorded_data_DWA_15.bag  recorded_data_DWA_7.bag  recorded_data_TEB_3.bag  recorded_data_TEB_4.bag  recorded_data_TEB_6.bag  recorded_data_TEB_7.bag  recorded_data_TEB_9.bag  recorded_data_nMPC_1.bag  recorded_data_nMPC_16.bag  recorded_data_nMPC_17.bag  recorded_data_nMPC_18.bag  recorded_data_nMPC_2.bag  recorded_data_nMPC_23.bag  recorded_data_nMPC_6.bag
src/amr_control/docs/: 0_Eppacher_Feedback_Struktur.md  Paper_Structure.txt  Pseudocode_nMPC.md  Untitled Diagram.drawio  paper.tex
src/amr_control/launch/: map.launch  move_base.launch  move_base_DWA.launch  move_base_TEB.launch  move_base_nMPC.launch  move_base_test.launch  ridgeback_simulation.launch  start_optimal_control.launch  visualize_recorded_path.launch  walle_simulation.launch
src/amr_control/maps/: experimental_room4_map.pgm  experimental_room4_map.yaml  gmapping.md  ridgeback_world.yaml  small_house.yaml  small_house_1.yaml
src/amr_control/param/: dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  optimal_control_params.yaml  teb_local_planner_params.yaml
src/amr_control/param/particle_filter_param/: general_params.yaml  motion_model_params.yaml  sensor_model_params.yaml
src/amr_control/scripts/: casadi_example.py  controller.py  garbage_collector.py  move_base_execution.py  move_urdf_box.py  optimal_control.py  path_recorder.py  plot_paths.py  trajectory_planner.py  visualizer.py
src/amr_control/scripts/tutorials/: multiple_shooting_nmpc_tutorial.py
src/amr_control/src/amr_control/: controller.py  costmap_obstacle_detection.py  obstacle.py  obstacle_detection.py  optimal_control.py  robot_model.py  trajectory_interpolation_test.py  trajectory_planner.py  visualizer.py
src/amr_control/src/amr_control/tutorials/: multiple_shooting_nmpc_obstacle_avoidance_refrence_tracking.py  multiple_shooting_nmpc_obstacle_avoidance_tutorial.py  multiple_shooting_nmpc_tutorial.py  ros_multiple_shooting_nmpc_obstacle_avoidance_refrence_tracking.py  single_shooting_nmpc_tutorial.py
src/amr_control/urdf/: cube.urdf  door.urdf
